<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center_horizontal">



<TextView android:text="@string/choose_menu" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/header_margin"
        android:paddingRight="@dimen/header_margin"
        android:paddingLeft="@dimen/header_margin"
        android:paddingBottom="@dimen/header_bottom_margin"
        android:textSize="@dimen/text_size"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:gravity="clip_horizontal" />

    <Button
        android:id="@+id/button_add_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_request"/>

    <Button
        android:id="@+id/button_update_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_request"/>

    <Button
        android:id="@+id/button_delete_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_request"/>

    <Button
        android:id="@+id/button_view_requests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_all_requests" />

    <Button
        android:id="@+id/button_view_chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_chart" />

    <com.github.mikephil.charting.charts.PieChart
        android:layout_width="368dp"
        android:layout_height="285dp"
        android:id="@+id/idPieChart"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
    </com.github.mikephil.charting.charts.PieChart>

</LinearLayout>